hphp/hack/test/typecheck/const_attribute/static/unset_const_on_instance.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class A {
  const dict<int, string> C = dict[1 => "green"];
}

function foo(): void{
  $a = new A();
  unset($a::C);
}
